# Image_processor

./: CMakeLists.txt  CommandInterpretator.cpp  CommandInterpretator.h  Crop.cpp  Crop.h  EdgeDetection.cpp  EdgeDetection.h  Filter.h  Grayscale.cpp  Grayscale.h  InputOutput.cpp  InputOutput.h  Negative.cpp  Negative.h  README.md  Sharpening.cpp  Sharpening.h  image.cpp  image.h  image_processor.cpp
